--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
               </button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav mr-auto"></ul>
-                    <span class="navbar-text actions"> <a href="/index0" class="login"></a>
+                    <span class="navbar-text actions"> <a href="/" class="login">Home</a>
 					<a href ="/signup">sign_up</a>
                      </div>
             </div>
@@ -37,14 +37,14 @@
       </div>
       <div class="col-sm-4">
           <h4>LOGIN</h4>
-          <form action="/login" method="POST">
+          <form action="/loginInfo" method="POST">
               <div class="form-group">
                 <label for="pwd">Email:</label>
-                <input name="email" type="email" class="form-control" id="pwd">
+                <input name="email" type="email" class="form-control" id="pwd" required>
               </div>
               <div class="form-group">
                 <label for="pwd">Password:</label>
-                <input name="password" type="password" class="form-control" id="password">
+                <input name="password" type="password" class="form-control" id="password" required>
               </div>
                
               <br>
@@ -54,10 +54,7 @@
     </div>
     <hr>
 
-    
-     
-    <h4> The details are:</h4>
-       {{var}}
+
      
     <br>
     <br>
