--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,7 +47,7 @@
             <div>
               <h1>Welcome to our <span class="text-warning">website!</span> </h1>
               <p class="lead my-5">
-                If you are planning to book movie tickets for the latest movie in your location, don't look any further. Now it is easy to get with online ticket booking with MTBS. Your one-stop solution for movies to watch near you. Everyone enjoys watching thier favorite movies on the big screen, and the exitement of watching it with friends is unparalled. if you have been eagarely waiting for a movie that you can watch with your firends and family, now you know where to get the tickets from.  
+                If you are planning to book movie tickets for the latest movie in your location, don't look any further. Now it is easy to get with online ticket booking with MTBS. Your one-stop solution for movies to watch near you. Everyone enjoys watching thier favorite movies on the big screen, and the exitement of watching it with friends is unparalled. if you have been eagarely waiting for a movie that you can watch with your firends and family, now you know where to get the tickets from!!!.  
               </p>
               <button class="btn btn-primary btn-lg">Check out the movies playing near you</button>
             </div>
