--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -51,8 +51,6 @@
               </p>
               <button class="btn btn-primary btn-lg">Check out the movies playing near you</button>
             </div>
-            <img class="img-fluid w-10 d-none d-lg-block" src="img_homepage\movie-cam.svg" alt="">
-            <img  src="/image/ds.png" >
           </div>
 
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -66,15 +64,15 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <img  src="/Users/ASUS/OneDrive/Desktop/FLASKNEWPROJ/image/ds.png" >
+                <img  src="static/img/ds.png" >
               </div>
         
               <div class="item">
-                <img  src="/Users/ASUS/OneDrive/Desktop/FLASKNEWPROJ/image/avengers.png">
+                <img  src="static/img/avengers.png">
               </div>
             
               <div class="item">
-                <img  src="/Users/ASUS/OneDrive/Desktop/FLASKNEWPROJ/image/venom.png">
+                <img  src="static/img/venom.png">
               </div>
             </div>
         
