--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,6 +34,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/signup">Register</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/registrationInfox">registration information</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" >imageinfo</a>
+            </li>
             </ul>
               </div>
           </div>
@@ -53,41 +59,31 @@
             </div>
           </div>
 
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-        
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-              <div class="item active">
-                <img  src="static/img/ds.png" >
+          <div>
+            <form action="/" method="GET">
+              <div class="col-md-8">
+              <table id="example" class="table table-striped table-bordered" style="width:100%">
+                <thead style="background-color: rgb(91, 165, 42);">
+                  <tr>
+              
+                  </tr>
+                </thead>
+                <tbody style="background-color: rgb(255, 255, 255);">
+                <tr> 
+                  {% for M in data %}
+                        <td> <a href="/edit/{{M[1]}}" ><img  src="data:;base64,{{M[0]}}" width="200" 
+                          height="300"/></a></img></td> 
+                  {% endfor %}
+                </tr>
+                <tr> 
+                  {% for M in data %}
+                        <td>{{M[2]}}</td> 
+                  {% endfor %}
+                </tr>
+                </tbody>
+              </table>
               </div>
-        
-              <div class="item">
-                <img  src="static/img/avengers.png">
-              </div>
-            
-              <div class="item">
-                <img  src="static/img/venom.png">
-              </div>
-            </div>
-        
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+              </form>
+          </div>       
 </body>
 </html>
